--- a/src/app/modules/goods/views/create/create.component.html
+++ b/src/app/modules/goods/views/create/create.component.html
@@ -111,6 +111,14 @@
           [control]="form.controls.description_ru"
           [error]="errors.description_ru"
         ></form-input>
+        <form-select
+          cols="12"
+          [items]="categories"
+          class="form__item"
+          [label]="t('fields.categoryId')"
+          [control]="form.controls.categoryId"
+          [error]="errors.categoryId"
+        ></form-select>
       </form>
     </div>
     <div class="card__footer">
