--- a/src/app/modules/goods/views/edit/edit.component.html
+++ b/src/app/modules/goods/views/edit/edit.component.html
@@ -66,7 +66,7 @@
           class="form__item"
           type="number"
           [label]="t('fields.heigth')"
-          [control]="form.controls.heigth"
+          [control]="form.controls.height"
           [error]="errors.heigth"
         ></form-input>
         <form-input
@@ -120,6 +120,14 @@
           [control]="form.controls.description_ru"
           [error]="errors.description_ru"
         ></form-input>
+        <form-select
+          cols="12"
+          [items]="categories"
+          class="form__item"
+          [label]="t('fields.categoryId')"
+          [control]="form.controls.categoryId"
+          [error]="errors.categoryId"
+        ></form-select>
       </form>
     </div>
     <div class="card__footer">
