--- a/src/app/layouts/auth/auth.component.html
+++ b/src/app/layouts/auth/auth.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="card">
+<div class="login">
+  <mat-card class="mat-elevation-z6">
     <router-outlet></router-outlet>
-  </div>
+  </mat-card>
 </div>
