--- a/src/app/modules/auth/views/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/views/forgot-password/forgot-password.component.html
@@ -2,24 +2,32 @@
 <div class="example-container">
   <div class="form-container" style="min-width: 300px">
     <form [formGroup]="form" class="mt-10">
-      <form-input
-        [type]="'email'"
-        [control]="form.controls.email"
-        [label]="'Email'"
-        (keyup.enter)="submit($event)"
-      ></form-input>
+      <mat-form-field appearance="outline" class="full-width mx-5">
+        <mat-label translate="roles.fields.email"> email</mat-label>
+        <input
+          (keyup.enter)="submit($event)"
+          matInput
+          placeholder="Placeholder"
+          [formControl]="form.controls.email"
+        />
+        <mat-error *ngIf="getErrorMessage('email')">
+          {{ getErrorMessage("email") }}
+        </mat-error>
+      </mat-form-field>
     </form>
-    <button class="btn" routerLink="/auth" style="margin-left: 10px">
-      Go to login
-    </button>
+    <div class="ml-10 mb-10 text-right">
+      <a  routerLink="/auth"> Go to login </a>
+    </div>
+
     <button
-      class="btn"
+      mat-raised-button
+      class="full-width"
       light
       type="submit"
-      theme="primary"
+      color="primary"
       (click)="submit($event)"
     >
-      reset password
+      Reset password
     </button>
   </div>
 </div>
