--- a/src/app/layouts/auth/auth.component.scss
+++ b/src/app/layouts/auth/auth.component.scss
@@ -1,8 +1,8 @@
-.container {
+.login {
   width: 100%;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--body);
+  background-color: var(--light);
 }
