--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -1,5 +1,5 @@
 <div style="display: flex">
-  <mat-list style="padding-top: 63px" color="primary" >
+  <mat-list style="padding-top: 63px" color="primary">
     <mat-list-item
       *ngFor="let item of menu"
       [routerLink]="item.link"
@@ -10,9 +10,14 @@
         <mat-icon text="light-gray">{{ item.icon }}</mat-icon>
       </button>
     </mat-list-item>
+    <mat-list-item (click)="logout()">
+      <button mat-icon-button>
+        <mat-icon text="light-gray">logout</mat-icon>
+      </button>
+    </mat-list-item>
   </mat-list>
   <mat-drawer-container
-    class="example-container mat-elevation-z4"
+    class="example-container"
     style="width: 100%; height: 100vh"
   >
     <mat-drawer
@@ -30,20 +35,25 @@
         >
           <mat-label text="light-gray"> {{ item.text }}</mat-label>
         </mat-list-item>
+        <mat-list-item (click)="logout()">
+          <mat-label text="light-gray"> Logout</mat-label>
+        </mat-list-item>
       </mat-list>
     </mat-drawer>
     <div>
       <mat-toolbar color="primary">
-        <mat-toolbar-row class="mat-elevation-z4">
+        <mat-toolbar-row
+          class="mat-elevation-z4 d-flex align-center space-between"
+        >
           <button
             (click)="drawer.toggle()"
             mat-icon-button
             class="example-icon"
-            aria-label="Example icon-button with menu icon"
           >
             <mat-icon>menu</mat-icon>
           </button>
           <span class="example-spacer"></span>
+          <lang-switcher></lang-switcher>
         </mat-toolbar-row>
       </mat-toolbar>
       <div>
