--- a/src/app/modules/auth/views/login/login.component.html
+++ b/src/app/modules/auth/views/login/login.component.html
@@ -1,33 +1,49 @@
 <div class="title">Login</div>
 <div class="example-container">
   <div class="form-container">
-    <form [formGroup]="form" class="mt-10">
-      <form-input
-        (keyup.enter)="submit($event)"
-        [icon]="'flaticon-write-email-envelope-button'"
-        [type]="'email'"
-        [control]="form.controls.email"
-        [label]="'Email'"
-      >
-      </form-input>
-      <form-input
-        (keyup.enter)="submit($event)"
-        [icon]="'flaticon-locked-padlock-outline'"
-        [type]="'password'"
-        [control]="form.controls.password"
-        [label]="'Password'"
-      ></form-input>
+    <form [formGroup]="form">
+      <mat-grid-list cols="12" rowHeight="100px">
+        <mat-grid-tile colspan="12">
+          <mat-form-field appearance="outline" class="full-width mx-5">
+            <mat-label translate="roles.fields.email"> email</mat-label>
+            <input
+              (keyup.enter)="submit($event)"
+              matInput
+              placeholder="Placeholder"
+              [formControl]="form.controls.email"
+            />
+            <mat-error *ngIf="getErrorMessage('email')">
+              {{ getErrorMessage("email") }}
+            </mat-error>
+          </mat-form-field>
+        </mat-grid-tile>
+        <mat-grid-tile colspan="12">
+          <mat-form-field appearance="outline" class="full-width mx-5">
+            <mat-label translate="roles.fields.password"> password</mat-label>
+            <input
+              type="password"
+              (keyup.enter)="submit($event)"
+              matInput
+              placeholder="Placeholder"
+              [formControl]="form.controls.password"
+            />
+            <mat-error *ngIf="getErrorMessage('password')">
+              {{ getErrorMessage("password") }}
+            </mat-error>
+          </mat-form-field>
+        </mat-grid-tile>
+      </mat-grid-list>
     </form>
     <div class="text-right full-width pb-5">
       <a routerLink="/auth/forgot-password">Forgot password?</a>
     </div>
     <div>
       <button
-        class="btn full-width"
+        mat-raised-button
+        class="full-width"
         light
         type="submit"
-        style="min-width: 200px"
-        theme="primary"
+        color="primary"
         (click)="submit($event)"
       >
         Log In
