--- a/src/app/modules/categories/views/index/index.component.html
+++ b/src/app/modules/categories/views/index/index.component.html
@@ -11,6 +11,7 @@
   (sort)="sortData($event)"
   (update)="loadData()"
   (filter)="toggleFilters()"
+  (resetParams)="resetFilter()"
 >
   <div>
     <mat-form-field appearance="outline">
