--- a/src/app/modules/users/views/index/index.component.html
+++ b/src/app/modules/users/views/index/index.component.html
@@ -11,6 +11,7 @@
   (sort)="sortData($event)"
   (update)="loadData()"
   (filter)="toggleFilters()"
+  (resetParams)="resetFilter()"
 >
   <form [formGroup]="filter">
     <mat-grid-list cols="12" rowHeight="100px">
