--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,10 @@
+@import "assets/scss/material-icons/material-normal.css";
+@import "assets/scss/reset";
+@import "assets/scss/theme";
+@import "assets/scss/primary";
+@import "assets/scss/global";
 @import '~@angular/material/theming';
+
 @include mat-core();
 
 $material-primary: mat-palette($mat-indigo);
@@ -13,16 +19,7 @@ $material-theme: mat-light-theme((
   )
 ));
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
 @include angular-material-theme($material-theme);
-
-@import "assets/scss/material-icons/material-normal.css";
-@import "assets/scss/reset";
-@import "assets/scss/theme";
-@import "assets/scss/primary";
-@import "assets/scss/global";
 
 body {
   margin: 0;
@@ -33,5 +30,5 @@ html {
   scroll-behavior: smooth !important;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+//html, body { height: 100%; }
+//body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
