--- a/src/app/modules/goods/views/create/create.component.html
+++ b/src/app/modules/goods/views/create/create.component.html
@@ -1,21 +1,15 @@
 <div class="container">
-  <div class="card full-width" style="max-width: 900px">
-    <div class="card__header">
-      <div
-        class="card__header--title"
-        text="text"
-        translate="goods.headers.create"
-      >
-        Create
-      </div>
-    </div>
-    <div class="card__content">
+  <mat-card style="max-width: 900px">
+    <mat-card-title class="pa-5">{{
+      $t("goods.headers.create")
+    }}</mat-card-title>
+    <mat-card-content>
       <form [formGroup]="form" class="form">
         <form-input
           cols="12"
           (keyup.enter)="submit()"
           class="form__item"
-          [label]="t('fields.name_ro')"
+          [label]="$t('goods.fields.name_ro')"
           [control]="form.controls.name_ro"
           [error]="errors.name_ro"
         ></form-input>
@@ -23,7 +17,7 @@
           cols="12"
           (keyup.enter)="submit()"
           class="form__item"
-          [label]="t('fields.name_en')"
+          [label]="$t('goods.fields.name_en')"
           [control]="form.controls.name_en"
           [error]="errors.name_en"
         ></form-input>
@@ -31,7 +25,7 @@
           cols="12"
           (keyup.enter)="submit()"
           class="form__item"
-          [label]="t('fields.name_ru')"
+          [label]="$t('goods.fields.name_ru')"
           [control]="form.controls.name_ru"
           [error]="errors.name_ru"
         ></form-input>
@@ -40,7 +34,7 @@
           (keyup.enter)="submit()"
           class="form__item"
           type="number"
-          [label]="t('fields.price')"
+          [label]="$t('goods.fields.price')"
           [control]="form.controls.price"
           [error]="errors.price"
         ></form-input>
@@ -48,7 +42,7 @@
           cols="4"
           (keyup.enter)="submit()"
           class="form__item"
-          [label]="t('fields.discount')"
+          [label]="$t('goods.fields.discount')"
           [control]="form.controls.discount"
           [error]="errors.discount"
         ></form-input>
@@ -56,7 +50,7 @@
           (keyup.enter)="submit()"
           cols="4"
           class="form__item"
-          [label]="t('fields.image')"
+          [label]="$t('goods.fields.image')"
           [control]="form.controls.image"
           [error]="errors.image"
         ></app-file-uploader>
@@ -65,7 +59,7 @@
           (keyup.enter)="submit()"
           class="form__item"
           type="number"
-          [label]="t('fields.height')"
+          [label]="$t('goods.fields.height')"
           [control]="form.controls.height"
           [error]="errors.height"
         ></form-input>
@@ -74,7 +68,7 @@
           (keyup.enter)="submit()"
           class="form__item"
           type="number"
-          [label]="t('fields.width')"
+          [label]="$t('goods.fields.width')"
           [control]="form.controls.width"
           [error]="errors.width"
         ></form-input>
@@ -83,7 +77,7 @@
           (keyup.enter)="submit()"
           class="form__item"
           type="number"
-          [label]="t('fields.length')"
+          [label]="$t('goods.fields.length')"
           [control]="form.controls.length"
           [error]="errors.length"
         ></form-input>
@@ -91,7 +85,7 @@
           cols="12"
           (keyup.enter)="submit()"
           class="form__item"
-          [label]="t('fields.description_ro')"
+          [label]="$t('goods.fields.description_ro')"
           [control]="form.controls.description_ro"
           [error]="errors.description_ro"
         ></form-input>
@@ -99,7 +93,7 @@
           cols="12"
           (keyup.enter)="submit()"
           class="form__item"
-          [label]="t('fields.description_en')"
+          [label]="$t('goods.fields.description_en')"
           [control]="form.controls.description_en"
           [error]="errors.description_en"
         ></form-input>
@@ -107,7 +101,7 @@
           cols="12"
           (keyup.enter)="submit()"
           class="form__item"
-          [label]="t('fields.description_ru')"
+          [label]="$t('goods.fields.description_ru')"
           [control]="form.controls.description_ru"
           [error]="errors.description_ru"
         ></form-input>
@@ -115,32 +109,32 @@
           cols="12"
           [items]="categories"
           class="form__item"
-          [label]="t('fields.categoryId')"
+          [label]="$t('goods.fields.categoryId')"
           [control]="form.controls.categoryId"
           [error]="errors.categoryId"
         ></form-select>
       </form>
-    </div>
-    <div class="card__footer">
-      <div>
+    </mat-card-content>
+    <mat-card-actions>
+      <div class="d-flex align-center justify-end full-width">
         <button
-          class="card__footer--btn card__footer--cancel"
+          mat-button
           routerLink="../"
-          translate="global_buttons.cancel"
+          [translate]="'global_buttons.cancel'"
           text="text"
         >
           cancel
         </button>
         <button
+          mat-raised-button
           [disabled]="loading"
-          theme="primary"
-          class="card__footer--btn"
+          color="primary"
           (click)="submit()"
-          translate="global_buttons.save"
+          [translate]="'global_buttons.save'"
         >
           submit
         </button>
       </div>
-    </div>
-  </div>
+    </mat-card-actions>
+  </mat-card>
 </div>
