--- a/src/app/components/data-table/data-table.component.html
+++ b/src/app/components/data-table/data-table.component.html
@@ -37,7 +37,13 @@
       </div>
     </div>
     <div class="d-flex flex-column" *ngIf="showFilters">
-      <mat-card-title class="mt-10">Filter</mat-card-title>
+      <mat-card-title class="mt-10">
+        <div class="position-relative my-5">
+          <mat-divider class="my-5"></mat-divider>
+        </div>
+
+        <div class="mt-20">Filter</div></mat-card-title
+      >
       <ng-content></ng-content>
       <mat-card-actions>
         <div class="d-flex align-center justify-end full-width">
@@ -49,6 +55,7 @@
       </mat-card-actions>
     </div>
     <mat-progress-bar mode="indeterminate" *ngIf="loading"></mat-progress-bar>
+    <div class="full-width" style="height: 4px" *ngIf="!loading"></div>
   </div>
   <mat-card-content>
     <table
